030-software/fluxcd/apps/infisical/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infisical
  labels:
    bundle.cert-manager.io/inject-cm: enabled
