030-software/fluxcd/apps/infisical/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: infisical
spec:
  hostnames:
  - infisical.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: infisical
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
